# example_package_hahattpro

./: .gitignore  README.md  build_pypi.sh  pyproject.toml
src/example_package_hahattpro/: __init__.py  dev_class.py  example.py  the_jinja2.py  the_template_reader.py
src/example_package_hahattpro/code_sample/: do_something.py
src/example_package_hahattpro/template/: mytemplate.txt
