[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "example_package_hahattpro"
version = "0.0.2"
authors = [
  { name="Thai Thien", email="tt@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ttpro1995/example_package_hahattpro"
"Bug Tracker" = "https://github.com/ttpro1995/example_package_hahattpro/issues"