[build-system]
requires = ["setuptools>=61.0", "Jinja2>=3"]
build-backend = "setuptools.build_meta"


[project]
name = "example_package_hahattpro"
version = "0.0.8dev"
authors = [
  { name="Thai Thien", email="tt@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ttpro1995/example_package_hahattpro"
"Bug Tracker" = "https://github.com/ttpro1995/example_package_hahattpro/issues"


[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
include = ["example_package_hahattpro*"]

[tool.setuptools.package-data]
example_package_hahattpro = ["*.txt", "*.rst"]
"example_package_hahattpro.template" = ["*.txt"]